--- a/napcat-plugin-amsghook/webui/config.html
+++ b/napcat-plugin-amsghook/webui/config.html
@@ -743,6 +743,16 @@
                 </div>
               </div>
             </div>
+            <div
+              style="padding:10px 14px;margin-bottom:12px;background:rgba(239,68,68,.08);border:1px solid rgba(239,68,68,.2);border-radius:10px;display:flex;align-items:center;gap:8px">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#ef4444" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0">
+                <circle cx="12" cy="12" r="10" />
+                <path d="m15 9-6 6" />
+                <path d="m9 9 6 6" />
+              </svg>
+              <span style="font-size:11px;color:#dc2626">⚠️ 使用官方机器人代发功能可能导致你的 QQ 开放平台机器人账号或主体被封禁，请自行承担风险。</span>
+            </div>
             <div class="sec-t">连接配置</div>
             <div class="flex gap-3 py-3 border-b border-blue-100/30 dark:border-blue-900/10">
               <div class="w-1/5">
