fix(groupguard): restore missing sendGroupMsg method in state.ts and bump version to 1.0.12

--- a/napcat-plugin-groupguard/webui/config.html
+++ b/napcat-plugin-groupguard/webui/config.html
@@ -631,6 +631,7 @@
                 <div class="cfg-row"><div class="text-sm font-medium">屏蔽小程序</div><div class="tgl" id="c-mf-l" onclick="tg(this)"></div></div>
                 <div class="cfg-row"><div class="text-sm font-medium">屏蔽名片</div><div class="tgl" id="c-mf-c" onclick="tg(this)"></div></div>
                 <div class="cfg-row"><div class="text-sm font-medium">屏蔽链接</div><div class="tgl" id="c-mf-u" onclick="tg(this)"></div></div>
+                <div class="cfg-row"><div class="text-sm font-medium">屏蔽二维码</div><div class="tgl" id="c-mf-q" onclick="tg(this)"></div></div>
               </div>
             </div>
 
